[package]
name = "candles"
version = "1.0.0"
authors = ["Lunar <lunar@forsaken-borders.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.0.0"
dirs = "2.0.2"
chrono = "0.4.11"

[dependencies.gtk]
version = "0.8.1"
features = ["v3_16"]

[dependencies.gio]
version = "0.8.1"
features = ["v2_44"]
